Prepare project for reader subproject

--- a/areas-spatial-indexing-reader/build.gradle
+++ b/areas-spatial-indexing-reader/build.gradle
@@ -1,3 +1,4 @@
 dependencies {
     implementation project(':areas-spatial-indexing-core')
+    testImplementation project(':areas-spatial-indexing-reader')
 }
